--- a/docs/css/menu.css
+++ b/docs/css/menu.css
@@ -47,6 +47,10 @@ game {
     font-size: 35px;
 }
 
+.start-controls .list{
+    list-style: none;
+}
+
 .selected{
     -webkit-text-stroke: 2px red;
 }
