Changed code image

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -78,8 +78,8 @@ score {
 }
 
 code {
-    background-image: url(../img/code.png);
-    width: 512px; height: 512px;
+    background-image: url(../img/code.gif);
+    width: 80px; height: 80px;
 }
 
 cloud1 {
