--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -72,6 +72,15 @@ background {
 score {
     color:white;
     font-size:26px;
+    top:0; left:0;
+    font-family: 'Press Start 2P', cursive;
+    margin: 20px;
+    -webkit-text-stroke: 1px rgb(0, 0, 0);
+}
+timer {
+    color:white;
+    font-size:26px;
+    top:0; right:0;
     font-family: 'Press Start 2P', cursive;
     margin: 20px;
     -webkit-text-stroke: 1px rgb(0, 0, 0);
