Added comments and changed flicker to shutter

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -139,7 +139,7 @@ battery.red {
     background-image: url(../img/battery_red.png);
 }
 
-battery.flicker {
+battery.shutter {
     background-image: url(../img/battery_flicker.gif);
 }
 
