Fixed terminal to fit new canvas

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -237,7 +237,13 @@ Terminal1Player {
 
 Terminal1Block {
     background-image: url(../img/terminal1/terminal1_block1.png);
-    width:811px; height:1059px;
+    width:650px; height:734px;
+    z-index: 11;
+}
+
+.terminal-block-blink {
+    background-image: url(../img/terminal1/terminal1_block1_red.png);
+    width:650px; height:734px;
     z-index: 11;
 }
 
