--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -268,3 +268,17 @@ message {
     z-index: 12;
 }
 
+.gamemessagebox {
+    left: 35%; top: 35%;
+}
+
+gamemessage {
+    font-family: 'Press Start 2P', cursive;
+    color: red;
+    font-size: 100px;
+    text-align: center;
+    z-index: 12;
+    
+
+}
+
